--- a/shoesboot-backend/src/main/resources/application-dev.yml
+++ b/shoesboot-backend/src/main/resources/application-dev.yml
@@ -16,3 +16,9 @@ mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
+swagger:
+  enable: true
+  application-name: ${spring.application.name}
+  application-version: 1.0
+  application-description: springfox swagger
+  try-host: http://localhost:${server.port}
