--- a/shoesboot-frontend/angular.json
+++ b/shoesboot-frontend/angular.json
@@ -123,5 +123,8 @@
       }
     }
   },
-  "defaultProject": "ng-alain"
+  "defaultProject": "ng-alain",
+  "cli": {
+    "analytics": false
+  }
 }
