--- a/classroom/pom.xml
+++ b/classroom/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>druid</artifactId>
             <version>1.1.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.61</version>
+        </dependency>
     </dependencies>
 
     <build>
